Make JWT token requester Android-compatible